--- a/src/components/PlecoAnalyzer.astro
+++ b/src/components/PlecoAnalyzer.astro
@@ -154,7 +154,7 @@ const {
 </style>
 
 <script>
-  import { fastBPMDetect } from '../scripts/xa-beat.js'
+  import { fastBPMDetect } from '/src/scripts/xa-beat.js'
   import { fastLoopAnalysis } from '../scripts/xa-loop.js'
   import { LoopPlayer } from '../scripts/LoopPlayer.js'
   import { computeRMS } from '../scripts/audio-utils.js'
