Add audio conversion script

--- a/src/components/AudioAnalyzer.astro
+++ b/src/components/AudioAnalyzer.astro
@@ -22,13 +22,13 @@ const {
   </div>
 
   <div class="sample-buttons">
-    <button class="sample-btn" data-sample="12-8-Jazzy-Drumset-03.aif">
+    <button class="sample-btn" data-sample="12-8-Jazzy-Drumset-03.mp3">
       Jazz Drums
     </button>
-    <button class="sample-btn" data-sample="Bassline For Doppler Song - 11.aif">
+    <button class="sample-btn" data-sample="Bassline For Doppler Song - 11.mp3">
       Bassline
     </button>
-    <button class="sample-btn" data-sample="Drive Through Beat.aif">
+    <button class="sample-btn" data-sample="Drive Through Beat.mp3">
       Drive Beat
     </button>
     <button class="sample-btn" data-sample="ui.m4a">UI Loop Test</button>
